language/move-lang/tests/move_check/expansion/type_arguments_on_field_access.exp
error: 

   ┌── tests/move_check/expansion/type_arguments_on_field_access.move:6:17 ───
   │
 6 │         x.f<u64>;
   │                 ^ Unexpected token: ';'
   ·
 6 │         x.f<u64>;
   │                 - Expected: 'move', 'copy', 'break', 'continue', '[Name]', '[Address]', 'true', 'false', '[U64]', '(', '{', '::'
   │

